Fix bg animation on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1028,7 +1028,7 @@ a:hover {
         }
     }
     #bg {
-        background-size: 300px auto;
+        background-size: 100% auto;
         width: 900px;
     }
     /* Header */
